<resources>
    <string name="app_name">Calculadora de Primos</string>
    <string name="lblgeracao">Geração do Número</string>
    <string name="lbldigitacao">Digitação do Número</string>
    <string name="lblpropriedades">Propriedades do Número</string>
    <string name="lbldivisores">Divisores do Número</string>
    <string name="btngerar">Gerar Nº</string>
    <string name="btntransferir">Trasnferir</string>
    <string name="btnparidade">Paridade?</string>
    <string name="btnprimo">Primo?</string>
    <string name="btnlimpar">Limpar Tudo</string>
</resources>