<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/corAtividade"
        android:orientation="vertical" android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/corFundo"
            android:paddingStart="4dp"
            android:text="@string/lblgeracao"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/corFundo"
            android:orientation="horizontal"
            android:padding="2dp"
            android:paddingStart="4dp">

            <Button
                android:id="@+id/btnGerar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:onClick="btnGerarOnClick"
                android:text="@string/btngerar" />

            <TextView
                android:id="@+id/txtGerado"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center" android:textSize="20sp" />

        </LinearLayout>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/corAtividade" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/corFundo"
            android:paddingStart="4dp"
            android:text="@string/lbldigitacao"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/corFundo"
            android:orientation="horizontal"
            android:padding="2dp"
            android:paddingStart="4dp">

            <Button
                android:id="@+id/btnTransferir"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:onClick="btnTransferirOnClick"
                android:text="@string/btntransferir" />

            <EditText
                android:id="@+id/edtTransfere"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:autofillHints="número"
                android:inputType="number"
                android:text="898"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/corAtividade" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/corFundo"
            android:paddingStart="4dp"
            android:text="@string/lblpropriedades"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/corFundo"
            android:orientation="horizontal"
            android:padding="2dp"
            android:paddingStart="4dp">

            <Button
                android:id="@+id/btnParidade"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:onClick="btnParidadeOnClick"
                android:text="@string/btnparidade" />

            <TextView
                android:id="@+id/txtParidade"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text=""
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/corFundo"
            android:orientation="horizontal"
            android:padding="2dp"
            android:paddingStart="4dp">

            <Button
                android:id="@+id/btnPrimo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:onClick="btnPrimoOnClick"
                android:text="@string/btnprimo" />

            <TextView
                android:id="@+id/txtPrimo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text=""
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/corAtividade" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/corFundo"
            android:paddingStart="4dp"
            android:text="@string/lbldivisores"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtDivisores"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/cordivisores"
            android:onClick="txtDivisoresOnClick"
            android:paddingStart="10dp"
            android:scrollbars="vertical"
            android:text="" />

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnLimpaTudo"
            android:text="@string/btnlimpar"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>